--- a/src/components/layout/navbar/Navbar.css
+++ b/src/components/layout/navbar/Navbar.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 10vh;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   background-color: #c7cd83;
   align-items: center;
   padding: 10px;
